[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/always-success",
  "contracts/lock-proxy-lock",
  "contracts/input-type-proxy-lock",
  "contracts/output-type-proxy-lock",
  "contracts/single-use-lock",
  "contracts/type-burn-lock",
  "contracts/pointer-type",
  "tests",
]

[profile.release]
overflow-checks = true
strip = true
codegen-units = 1
